@@ -1,3 +1,9 @@
+2010-07-10 Patrick Galbraith <patg@patg.net> (4.016)
+* Disabled mysql_bind_type_guessing due to one performance issue 
+  querying on a indexed character column unquoted will mean the index 
+  is not used
+* Fixed int types that should be bools
+
 2010-07-09 Patrick Galbraith <patg@patg.net> (4.015)
 * BUG #56664 fixed t/40blobs.t skip_all logic (W. Phillip Moore)
 * BUG #57253 Fixed iteration past end of string (crash). (Chris Butler)
